@@ -1,3 +1,9 @@
+2008-11-05  Neil Roberts  <neil@linux.intel.com>
+
+	* clutter/clutter-color.c (clutter_color_new): Remove CLAMP macros
+	around the component parameters because they are guint8 anyway so
+	the CLAMP is redundant and it causes a warning.
+
 2008-11-04  Thomas Wood  <thomas@linux.intel.com>
 
 	* clutter/clutter-color.c: Update ClutterColor documentation as
